feat: added car wash profile routes